traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:4: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
                                                     return{true}}
                                                            ^Snake:4: warning: enclosing method murNord has result type Unit: return value discarded
                                                     return{true}}
                                                     ^Snake:8: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
                                                       return true}
                                                              ^Snake:8: warning: enclosing method murNord has result type Unit: return value discarded
                                                       return true}
                                                       ^Snake:10: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^Snake:10: warning: enclosing method murNord has result type Unit: return value discarded
  return false
  ^Snake:14: error: type mismatch;
 found   : Unit
 required: Boolean
  if(estFaceMur() && murNord()){return true}
                            ^Snake:14: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  if(estFaceMur() && murNord()){return true}
                                       ^Snake:14: warning: enclosing method estPosiFin has result type Unit: return value discarded
  if(estFaceMur() && murNord()){return true}
                                ^Snake:15: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false}
         ^Snake:15: warning: enclosing method estPosiFin has result type Unit: return value discarded
  return false}
  ^Snake:24: error: value unary_! is not a member of Unit
    }while(!estPosiFin())
           ^